--- a/src/Emvelope.Integration/Emvelope.Integration.csproj
+++ b/src/Emvelope.Integration/Emvelope.Integration.csproj
@@ -70,6 +70,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Models\IPagedEnumerable.cs" />
+    <Compile Include="Models\PagedEnumerable.cs" />
+    <Compile Include="PagingMetaProvider.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="DefaultsFeatures.cs" />
     <Compile Include="Models\Product.cs" />
