--- a/src/Emvelope/Emvelope.csproj
+++ b/src/Emvelope/Emvelope.csproj
@@ -56,6 +56,8 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Converters\EnvelopeJsonConverter.cs" />
+    <Compile Include="DefaultPluralizer.cs" />
+    <Compile Include="IPluralizer.cs" />
     <Compile Include="EmvelopeMediaTypeFormatter.cs" />
     <Compile Include="IMetaProvider.cs" />
     <Compile Include="MediaTypeFormatters\EnvelopeRead.cs" />
