[Feature] Ability to override the envelope name

--- a/src/Emvelope.Integration/Emvelope.Integration.csproj
+++ b/src/Emvelope.Integration/Emvelope.Integration.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Controllers\BatteriesController.cs" />
     <Compile Include="Models\Battery.cs" />
     <Compile Include="Models\IPagedEnumerable.cs" />
+    <Compile Include="Models\NewBatteryModel.cs" />
     <Compile Include="Models\PagedEnumerable.cs" />
     <Compile Include="PagingMetaProvider.cs" />
     <Compile Include="Startup.cs" />
